FIX: Add line height to body to help improve readability by havimf standard spacing between lines of text.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,7 @@
 /* General styles */
 body {
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+    line-height: 1.6;
     /* Generic project styles */
     color: #3a3a3a;
     font-family: 'Lato', sans-serif;
